fix blurry border in Chrome

--- a/src/components/Layout/Layout.less
+++ b/src/components/Layout/Layout.less
@@ -23,8 +23,6 @@
 
   max-width: 1200px;
   margin: auto;
-  margin-top: 50vh;
-  transform: translateY(-50%);
 
   @media screen and ( max-width: 1024px ) {
     margin: 0;
