--- a/src/index.less
+++ b/src/index.less
@@ -22,4 +22,8 @@ code {
 #root {
   height: 100vh;
   overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
