--- a/src/pages/Article/List.less
+++ b/src/pages/Article/List.less
@@ -57,6 +57,10 @@
       .btn-group {
         display: flex;
         justify-content: space-between;
+
+        .anticon:hover {
+          opacity: 0.5;
+        }
       }
     }
   }
